src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCFile*               DDCFileHandle;
   typedef DDCChannelGroup*         DDCChannelGroupHandle;
   typedef DDCChannel*               DDCChannelHandle;
   int __stdcall DDC_CreateChannelPropertyUInt8(DDCChannelHandle channel,
      const char *property,
      unsigned char value);
   int __stdcall DDC_CreateChannelPropertyInt16(DDCChannelHandle channel,
      const char *property,
      short value);
   int __stdcall DDC_CreateChannelPropertyInt32(DDCChannelHandle channel,
      const char *property,
      long value);
   int __stdcall DDC_CreateChannelPropertyFloat(DDCChannelHandle channel,
      const char *property,
      float value);
   int __stdcall DDC_CreateChannelPropertyDouble(DDCChannelHandle channel,
      const char *property,
      double value);
   int __stdcall DDC_CreateChannelPropertyString(DDCChannelHandle channel,
      const char *property,
      const char *value);
   int __stdcall DDC_SetChannelPropertyUInt8(DDCChannelHandle channel,
      const char* property,
      unsigned char value);
   int __stdcall DDC_SetChannelPropertyInt16(DDCChannelHandle channel,
      const char* property,
      short value);
   int __stdcall DDC_SetChannelPropertyInt32(DDCChannelHandle channel,
      const char* property,
      long value);
   int __stdcall DDC_SetChannelPropertyFloat(DDCChannelHandle channel,
      const char* property,
      float value);
   int __stdcall DDC_SetChannelPropertyDouble(DDCChannelHandle channel,
      const char* property,
      double value);
   int __stdcall DDC_SetChannelPropertyString(DDCChannelHandle channel,
      const char* property,
      const char *value);
   int __stdcall DDC_GetChannelPropertyUInt8(DDCChannelHandle channel,
      const char* property,
      unsigned char *value);
   int __stdcall DDC_GetChannelPropertyInt16(DDCChannelHandle channel,
      const char* property,
      short *value);
   int __stdcall DDC_GetChannelPropertyInt32(DDCChannelHandle channel, const
      char* property,
      long *value);
   int __stdcall DDC_GetChannelPropertyFloat(DDCChannelHandle channel,
      const char* property,
      float *value);
   int __stdcall DDC_GetChannelPropertyDouble(DDCChannelHandle channel,
      const char* property,
      double *value);
   int __stdcall DDC_GetChannelPropertyString(DDCChannelHandle channel,
      const char* property,
      char value[],
      size_t valueSize);
   int __stdcall DDC_GetFilePropertyNameFromIndex(DDCFileHandle file,
      size_t index,
      char propertyName[],
      size_t propertyNameSize);
   int __stdcall DDC_GetFilePropertyNameLengthFromIndex(DDCFileHandle file,
      size_t index,
      size_t* propertyNameLength);
   int __stdcall DDC_GetChannelGroupPropertyNameFromIndex(DDCChannelGroupHandle channelGroup,
      size_t index,
      char propertyName[],
      size_t propertyNameSize);
   int __stdcall DDC_GetChannelGroupPropertyNameLengthFromIndex(DDCChannelGroupHandle channelGroup,
      size_t index,
      size_t* propertyNameLength);
   int __stdcall DDC_GetChannelPropertyNameFromIndex(DDCChannelHandle channel,
      size_t index,
      char propertyName[],
      size_t propertyNameSize);
   int __stdcall DDC_GetChannelPropertyNameLengthFromIndex(DDCChannelHandle channel,
      size_t index,
      size_t* propertyNameLength);