src/NKnife.TDMS/Externals/TypeSafeMethod.cs


        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyUInt8(IntPtr channel, string property, byte value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyInt16(IntPtr channel, string property, short value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyInt32(IntPtr channel, string property, int value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyFloat(IntPtr channel, string property, float value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyDouble(IntPtr channel, string property, double value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_CreateChannelPropertyString(IntPtr channel, string property, string value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyUInt8(IntPtr channel, string property, byte value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyInt16(IntPtr channel, string property, short value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyInt32(IntPtr channel, string property, int value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyFloat(IntPtr channel, string property, float value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyDouble(IntPtr channel, string property, double value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_SetChannelPropertyString(IntPtr channel, string property, string value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyUInt8(IntPtr channel, string property, out byte value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyInt16(IntPtr channel, string property, out short value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyInt32(IntPtr channel, string property, out int value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyFloat(IntPtr channel, string property, out float value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyDouble(IntPtr channel, string property, out double value);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyString(IntPtr channel, string property, [Out] char[] value,
            UIntPtr valueSize);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetFilePropertyNameFromIndex(IntPtr file, UIntPtr index, [Out] char[] propertyName,
            UIntPtr propertyNameSize);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetFilePropertyNameLengthFromIndex(IntPtr file, UIntPtr index,
            out UIntPtr propertyNameLength);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelGroupPropertyNameFromIndex(IntPtr channelGroup, UIntPtr index,
            [Out] char[] propertyName, UIntPtr propertyNameSize);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelGroupPropertyNameLengthFromIndex(IntPtr channelGroup, UIntPtr index,
            out UIntPtr propertyNameLength);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyNameFromIndex(IntPtr channel, UIntPtr index,
            [Out] char[] propertyName, UIntPtr propertyNameSize);

        [DllImport(Dll, CallingConvention = CallingConvention.StdCall)]
        public static extern int DDC_GetChannelPropertyNameLengthFromIndex(IntPtr channel, UIntPtr index,
            out UIntPtr propertyNameLength);
    }
}